--- a/src/index.html
+++ b/src/index.html
@@ -26,5 +26,5 @@
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
-
+<script src="//unpkg.com/@ungap/global-this"></script>
 </html>
